--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,8 +7,8 @@
 .background {
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
+    bottom: 0;
     right: 0;
     background-position: center;
     background-repeat: no-repeat;
@@ -42,5 +42,9 @@
 }
 
 .w100 {
-    width: 100vw;
+    width: 100%;
+}
+
+.w50 {
+    width: 50%;
 }
