--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,26 +4,44 @@
     box-sizing: border-box;
 }
 
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+.bg {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../images/bg.jpg);
-    z-index: -1;
+}
+
+.bg-attach-fixed {
+    background-attachment: fixed;
+}
+
+.bg-attach-scroll {
+    background-attachment: scroll;
+}
+
+.bgimg-main {
+    background-image: url(../images/bg_main.jpg);
+}
+
+.bgimg1 {
+    background-image: url(../images/bg1.png);
+}
+
+.bgimg2 {
+    background-image: url(../images/bg2.jpg);
+}
+
+.pos-abs {
+    position: absolute;
 }
 
 .text {
     height: min-content;
-    background-color: rgba(114, 178, 216, 0.9);
+    background-color: rgba(22, 34, 41, 0.9);
+    color: #FFFFFF;
     margin: auto;
     text-align: center;
     padding: 80px;
-    box-shadow: 0px 0px 10px rgb(35, 56, 68);
+    box-shadow: 0px 0px 10px rgb(229, 236, 240);
 }
 
 .v-center {
@@ -31,6 +49,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.translucent {
+    opacity: 0.7;
+}
+
+.bgnone {
+    background: none;
 }
 
 .h100 {
